Add several pages, handler 404 page, add styles, add normalize css

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
-.App {
-  text-align: center;
+.app {
+  display: flex;
+  flex-grow: 1;
+  min-width: 0;
+  min-height: 0;
+}
+
+.appNavigationBar {
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  width: 200px;
+}
+
+.appWorkspace {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  min-height: 0;
+  min-width: 0;
 }
